  - Game now displays main menu with interactive buttons.

  - We should only need to find data files once, then the files module
    remembers their location.

  - Moved primative drawing functions to draw.h, draw.cpp from
    main.h, main.cpp. This allows us to draw things in other
    modules, like the menu.

  - Created Menu module for displaying and working woth the main menu.

  - Sonar screen now shows angle and direction to target.

  - If the player's sub is destoryed, the game should now end gracefully.

  - Losing a torpedo target no longer causes crash.

  - Created top-level make file for easier access.

  - Towed sonar array limits sub's maximum speed.

  - Crew now gives feedback about extending/reteiving towed array.

  - Sonar display now adds more colour contrast to different types
    of signals. Surface ships are green, submarines blue and torpedoes
    are red.

  - Torpedoes show up on sonar.

  - Created new mission

  - Missions can now be accessed using the -m flag on the command line.


========== openssn-0.4 released June 11, 2011 =========

  - Separated some ship-file/class file information.

  - Added basic mission parameters.

  - Targeting system now respects the new ship linked list format.

  - Adjusted ship data file format to be more clean.

  - Ships are now stored in a linked list, rather than fixed array.

  - Submarines now run from torpedoes.

  - Ships with sonar will now run away from torpedoes.

  - Fixed torpedo's sonar.

  - Fixed ESM station display. Signals from targets now display.

  - Converted abs() calls to fabs for compatibility with FreeBSD.


============ openssn-0.3 released May 30, 2011 =================

  - Non-player ships now make course changes on their own.

  - Ships now take damage when hit by torpedoes and sink.

  - Torpedoes can now run out of fuel (after around 8-10 miles).

  - Added torpedo clean-up code.

  - Torpedos now listen for and track their targets.
