@@ -24,6 +24,8 @@ void DrawBox(SDL_Surface *screen, int X1, int Y1, int Size, char Direction, Uint
 
 void DrawRectangle(SDL_Surface *screen, int x1, int y1, int x2, int y2, Uint32 color);
 
+void FillRectangle(SDL_Surface *screen, int x1, int y1, int x2, int y2, Uint32 color);
+
 void DrawCross(SDL_Surface *screen, int X1, int Y1, int Size, char Direction, Uint32 Color);
 
 #endif
