@@ -2,6 +2,7 @@
 #include "files.h"
 #include "menu.h"
 #include "draw.h"
+#include "dfont.h"
 
 
 SDL_Surface *menu_screen;
@@ -16,10 +17,10 @@ int Main_Menu(int *mission_number, SDL_Surface *screen)
    menu_screen = screen;
 
    dest.x = 400; dest.y = 0; dest.w = 624; dest.h = 768;
+   Display_Mission(*mission_number);
    while (! command)
    {
        Draw_Main_Menu(selected_button, menu_colour);
-       Display_Mission(*mission_number);
        SDL_UpdateRects(menu_screen, 1, &dest);
        action = Menu_Input();
        if (action == BUTTON_ACTIVATE)
@@ -100,6 +101,30 @@ int New_Mission(int next_prev, int old_mission)
 
 int Display_Mission(int mission_number)
 {
+   char *full_path, filename[256];
+   FILE *mission_file;
+   char line[256];
+   int y = 610;
+   DFont my_font("images/font.png", "data/font.dat");
+   Uint32 menu_background = SDL_MapRGB(menu_screen->format, 0, 0, 0);
+  
+   snprintf(filename, 256, "data/orders%d.txt", mission_number);
+   full_path = Find_Data_File(filename);
+   mission_file = fopen(full_path, "r");
+   if ( (full_path) && (full_path != filename) )
+      free(full_path);
+   if (mission_file)
+   {
+      FillRectangle(menu_screen, 440, 610, 980, 730, menu_background);
+      full_path = fgets(line, 256, mission_file);
+      while (full_path)
+      {  
+         my_font.PutString(menu_screen, 440, y, line);
+         full_path = fgets(line, 256, mission_file);
+         y += 12;
+      }
+      fclose(mission_file);
+   }
    return TRUE;
 }
 
@@ -159,12 +184,12 @@ int Menu_Input()
                      action = BUTTON_PLAY;
                 else if ( (mousex > 540) && (mousex < 885) &&
                           (mousey > 260) && (mousey < 335) )
-                     action = ACTION_QUIT;
-                else if ( (mousex > 460) && (mousex < 475) &&
-                          (mousey > 560) && (mousey < 570) )
+                     action = BUTTON_QUIT;
+                else if ( (mousex > 440) && (mousex < 475) &&
+                          (mousey > 550) && (mousey < 580) )
                      action = BUTTON_PREV_MISSION;
-                else if ( (mousex > 930) && (mousex < 850) &&
-                          (mousey > 560) && (mousey < 570) )
+                else if ( (mousex > 920) && (mousex < 960) &&
+                          (mousey > 550) && (mousey < 580) )
                      action = BUTTON_NEXT_MISSION;
 
           break;   // end of mouse stuff
@@ -174,7 +199,7 @@ int Menu_Input()
              else if (event.key.keysym.sym == SDLK_DOWN)
                   action = BUTTON_MOVE_DOWN;
              else if (event.key.keysym.sym == SDLK_ESCAPE)
-                  action = ACTION_QUIT;
+                  action = BUTTON_QUIT;
              else if ( (event.key.keysym.sym == SDLK_SPACE) ||
                        (event.key.keysym.sym == SDLK_RETURN) )
                   action = BUTTON_ACTIVATE;
